В интерфейсы коллекций добавили методы получения списка из набора элементов.